--- a/docker_example/docker-compose.yml
+++ b/docker_example/docker-compose.yml
@@ -1,29 +1,12 @@
 services:
   langflow:
-    image: langflowai/langflow:latest # or another version tag on https://hub.docker.com/r/langflowai/langflow
-    pull_policy: always               # set to 'always' when using 'latest' image
+    image: langflowai/langflow:latest  # 或者在 https://hub.docker.com/r/langflowai/langflow 选择特定版本
+    pull_policy: always               # 'latest' 版本建议设为 'always'，确保拉取最新镜像
     ports:
       - "7860:7860"
-    depends_on:
-      - postgres
     environment:
-      - LANGFLOW_DATABASE_URL=postgresql://langflow:langflow@postgres:5432/langflow
-      # This variable defines where the logs, file storage, monitor data and secret keys are stored.
-      - LANGFLOW_CONFIG_DIR=app/langflow
+      - LANGFLOW_DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:5432/langflow
+      # 配置存储目录，包括日志、文件存储、监控数据和密钥
+      - LANGFLOW_CONFIG_DIR=/app/langflow
     volumes:
-      - langflow-data:/app/langflow
-
-  postgres:
-    image: postgres:16
-    environment:
-      POSTGRES_USER: langflow
-      POSTGRES_PASSWORD: langflow
-      POSTGRES_DB: langflow
-    ports:
-      - "5432:5432"
-    volumes:
-      - langflow-postgres:/var/lib/postgresql/data
-
-volumes:
-  langflow-postgres:
-  langflow-data:
+      - /home/qystart/docker/langflow/langflow:/app/langflow
