--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ maintainers = [
 ]
 # Define your main dependencies here
 dependencies = [
+    "psycopg[binary]",
+    "httpx[socks]",
     "langflow-base==0.4.2",
     "beautifulsoup4==4.12.3",
     "google-search-results>=2.4.1,<3.0.0",
